fix: add spacing to elements with conflicting styles

--- a/assets/src/css/admin/settings.scss
+++ b/assets/src/css/admin/settings.scss
@@ -281,6 +281,10 @@ div.give-field-description {
 	font-size: 14px;
 }
 
+.give-tools-logs-tab, .give-tools-data-tab{
+    margin-left: 22px;
+}
+
 //--------------------------------------------------------------
 // Payment Gateways
 //--------------------------------------------------------------
